# tracking-hough

./: CMakeLists.txt  ComposeVideo.tcl  HoughTrack.tcl  HoughTrack_noGUI.tcl  ReadMe.md  build.sh  clean.sh  hough_kalman.py  intiwish
LIBTCL/: tclIndex  track.tcl  util.tcl
include/: Image.hh  contour.hh  feature.hh  filtre.hh  histo.hh  hough_circle.hh  hough_line.hh  hough_track.hh  morfo.hh  photo.hh
src/: Image.cc  contour.cc  feature.cc  filtre.cc  histo.cc  hough_circle.cc  hough_line.cc  hough_track.cc  init.cc  morfo.cc  photo.cc  tkMain.c
